--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@aws-amplify/ui-react": "^1.2.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "^4.0.3"
   },
   "resolutions": {
