--- a/amplify/backend/function/createreactappautham569336e0/src/package.json
+++ b/amplify/backend/function/createreactappautham569336e0/src/package.json
@@ -8,6 +8,7 @@
     "aws-serverless-express": "^3.3.5",
     "body-parser": "^1.17.1",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.15.2",
     "mongodb": "^4.2.2"
   },
