--- a/amplify/backend/function/createreactappautham569336e0/src/package.json
+++ b/amplify/backend/function/createreactappautham569336e0/src/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "aws-sdk": "^2.1048.0",
     "aws-serverless-express": "^3.3.5",
+    "axios": "^0.24.0",
     "body-parser": "^1.17.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
@@ -13,7 +14,6 @@
     "mongodb": "^4.2.2",
     "node-fetch": "^3.1.0"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
