--- a/amplify/backend/function/createreactappautham569336e0/src/package.json
+++ b/amplify/backend/function/createreactappautham569336e0/src/package.json
@@ -12,7 +12,8 @@
     "dotenv": "^10.0.0",
     "express": "^4.15.2",
     "mongodb": "^4.2.2",
-    "node-fetch": "^3.1.0"
+    "node-fetch": "^3.1.0",
+    "request": "^2.88.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
