--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-draft-wysiwyg": "^1.14.7",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^4.0.3",
+    "react-tabs": "^3.2.3",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.2"
   },
