--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "private": true,
   "dependencies": {
     "@aws-amplify/ui-react": "^1.2.6",
+    "@celebryts/react-autocomplete-tags": "^1.0.0",
     "@inovua/reactdatagrid-enterprise": "^4.5.7",
     "aws-amplify": "^4.2.0",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
+    "multiselect-react-dropdown": "^2.0.17",
     "react": "^16.13.1",
+    "react-autocomplete-tag": "^1.2.0",
     "react-data-table-component": "^7.4.6",
     "react-data-table-component-extensions": "^1.5.2",
     "react-dom": "^16.13.1",
@@ -16,6 +19,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "^4.0.3",
     "react-tabs": "^3.2.3",
+    "react-tag-autocomplete": "^6.3.0",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.2"
   },
