--- a/amplify/backend/function/createreactappautham569336e0/src/package.json
+++ b/amplify/backend/function/createreactappautham569336e0/src/package.json
@@ -11,6 +11,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.15.2",
+    "https": "^1.0.0",
     "mongodb": "^4.2.2",
     "node-fetch": "^3.1.0",
     "request": "^2.88.2"
