Added compress image option

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@celebryts/react-autocomplete-tags": "^1.0.0",
     "@inovua/reactdatagrid-enterprise": "^4.5.7",
     "aws-amplify": "^4.2.0",
+    "compressorjs": "^1.1.1",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
     "multiselect-react-dropdown": "^2.0.17",
@@ -16,6 +17,7 @@
     "react-data-table-component-extensions": "^1.5.2",
     "react-dom": "^16.13.1",
     "react-draft-wysiwyg": "^1.14.7",
+    "react-image-file-resizer": "^0.4.7",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^4.0.3",
     "react-tabs": "^3.2.3",
