--- a/amplify/backend/function/createreactappautham569336e0/src/package.json
+++ b/amplify/backend/function/createreactappautham569336e0/src/package.json
@@ -7,14 +7,13 @@
     "aws-sdk": "^2.1048.0",
     "aws-serverless-express": "^3.3.5",
     "axios": "^0.24.0",
-    "body-parser": "^1.17.1",
-    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.15.2",
     "https": "^1.0.0",
     "mongodb": "^4.2.2",
     "node-fetch": "^3.1.0",
-    "request": "^2.88.2"
+    "payload": "^0.14.0",
+    "serverless-http": "^2.7.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
